--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,13 @@
 apply plugin: 'com.android.application'
+apply from: 'config/quality/quality.gradle'
 
 android {
     compileSdkVersion 22
     buildToolsVersion "21.1.2"
+
+    packagingOptions {
+        exclude 'LICENSE.txt'
+    }
 
     defaultConfig {
         applicationId "guri.br.selfiestudio"
@@ -10,16 +15,24 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            testCoverageEnabled = true
+        }
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.0'
+    compile 'com.android.support:appcompat-v7:22.1.1'
+    androidTestCompile 'com.android.support:support-annotations:22.1.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.0'
+    androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
+    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.2.1'
 }
